--- a/index.html
+++ b/index.html
@@ -22,52 +22,52 @@
 
         <header>
             <nav>
-                <a href="#">Services</a>
-                <a href="#">Product</a>
-                <a href="#">Vision</a>
-                <a href="#">Features</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
             </nav>
 
-            <img id="logo-img" class="logo" src="/img/logo.png" alt="Great Idea! Company logo.">
+            <img id="logo-img" class="logo" src="" alt="Great Idea! Company logo.">
         </header>
 
         <section class="cta">
             <div class="cta-text">
-                <h1>Dom is Awesome</h1>
-                <button>Get Started</button>
+                <h1></h1>
+                <button></button>
             </div>
-            <img id="cta-img" src="/img/header-img.png" alt="Image of a code snippet.">
+            <img id="cta-img" src="" alt="Image of a code snippet.">
         </section>
 
         <section class="main-content">
 
             <div class="top-content">
                 <div class="text-content">
-                    <h4>Features</h4>
-                    <p>Doggo ipsum snoot h*ck porgo aqua doggo blop very hand that feed shibe borkdrive, aqua doggo big ol shoob very hand that feed shibe. Fluffer borkf I am bekom fat shoob he made many woofs waggy wags, such treat mlem long doggo big ol. </p>
+                    <h4></h4>
+                    <p></p>
                 </div>
                 <div class="text-content">
-                    <h4>About</h4>
-                    <p>Doggo ipsum snoot h*ck porgo aqua doggo blop very hand that feed shibe borkdrive, aqua doggo big ol shoob very hand that feed shibe. Fluffer borkf I am bekom fat shoob he made many woofs waggy wags, such treat mlem long doggo big ol. </p>
+                    <h4></h4>
+                    <p></p>
                 </div>
             </div>
 
-            <img class="middle-img" id="middle-img" src="/img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+            <img class="middle-img" id="middle-img" src="" alt="Image of code snippets across the screen">
 
             <div class="bottom-content">
                 <div class="text-content">
-                    <h4>Services</h4>
-                    <p>Doggo ipsum snoot h*ck porgo aqua doggo blop very hand that feed shibe borkdrive, aqua doggo big ol shoob very hand that feed shibe. Fluffer borkf I am bekom fat shoob he made many woofs waggy wags, such treat mlem long doggo big ol.</p>
+                    <h4></h4>
+                    <p></p>
                 </div>
                 <div class="text-content">
-                    <h4>Product</h4>
-                    <p>Doggo ipsum snoot h*ck porgo aqua doggo blop very hand that feed shibe borkdrive, aqua doggo big ol shoob very hand that feed shibe. Fluffer borkf I am bekom fat shoob he made many woofs waggy wags, such treat mlem long doggo big ol.</p>
+                    <h4></h4>
+                    <p></p>
                 </div>
                 <div class="text-content">
-                    <h4>Vision</h4>
-                    <p>Doggo ipsum snoot h*ck porgo aqua doggo blop very hand that feed shibe borkdrive, aqua doggo big ol shoob very hand that feed shibe. Fluffer borkf I am bekom fat shoob he made many woofs waggy wags, such treat mlem long doggo big ol.</p>
+                    <h4></h4>
+                    <p></p>
                 </div>
             </div>
 
@@ -75,20 +75,18 @@
 
         <section class="contact">
 
-            <h4>Contact</h4>
+            <h4></h4>
 
-            <p>123 Way 456 Street</p>
+            <p></p>
 
-            <p>Somewhere, USA</p>
+            <p></p>
 
-            <p>1(888)888-8888</p>
-
-            <a href="mailto:sales@greatidea.io">Email Us!</a>
+            <p></p>
 
         </section>
 
         <footer>
-            <p>Copyright Great Idea! 2018</p>
+            <p></p>
         </footer>
 
     </div><!-- container -->
